# aff4

./: .classpath  .gitignore  .hgignore  .project  INSTALL  Makefile  Makefile.am  README  SConstruct  TODO  autogen.sh  config.py  configure.ac  configure.in  facquire.py  fif.py  finfo.py  stats.py  test.py  test0.py  test1.py  test2.py  test3.py  test4.py  test5.py  test6.py
SconsUtils/: cunit.py  template.py  utils.py
applications/: SConstruct
applications/aff4/: afimager.py
applications/hash_imager/: imager.py  sk.py
applications/network/: SConstruct  _dissect.c  network.c  pypcap.c  reassembler.h  test.py
applications/pyflag/: loader.py  test.py
applications/pyflag/network/: SConstruct  network.c  network.h  packet.c  packet.h  pypacket.c  pypcap.c  reassembler.c  struct.c  tcp.c  tcp.h
applications/pyflag/pyflag/: DB.py  FlagHTTPServer.py  Framework.py  HTMLUI.py  PyFlagConstants.py  Registry.py  Reports.py  Scanner.py  Store.py  Theme.py  pyflaglog.py  test.py
applications/pyflag/pyflag/javascript/: functions.js
applications/pyflag/pyflag/plugins/: Core.py
deb/: SConscript
include/: aff1.h  aff4.h  aff4_constants.h  aff4_crypto.h  aff4_errors.h  aff4_http.h  aff4_image.h  aff4_internal.h  aff4_io.h  aff4_objects.h  aff4_public_misc.h  aff4_rdf.h  aff4_rdf_serialise.h  aff4_resolver.h  aff4_utils.h  aff4_zip.h  afflib.h  class.h  constants.h  encode.h  ewfvolume.h  exports.h  misc.h  queue.h  raptor.h  sc_aff4.h.in  sc_config.h.in  stringio.h  talloc.h  trp.h  zip.h
java/: .classpath  .project  README  build.xml
java/src/aff4/: AFF4Hasher.java  AFF4Imager.java  aff4compare.java  aff4dump.java  aff4signer.java  aff4verifier.java
java/src/aff4/commonobjects/: AuthorityReader.java  AuthorityWriter.java  Instance.java  LinkWriter.java  ReadWriteInstance.java  StreamResolver.java  ToolWriter.java  WarrantReader.java  WarrantWriter.java
java/src/aff4/container/: AuthorityReader.java  AuthorityWriter.java  Container.java  DirectoryCorpus.java  GeneralReadDevice.java  Instance.java  LinkWriter.java  ReadOnlyContainer.java  ReadWriteContainer.java  StreamResolver.java  WarrantReader.java  WarrantWriter.java  WritableStore.java
java/src/aff4/datamodel/: AddressResolutionException.java  DiscontiguousMapWriter.java  MapReader.java  Readable.java  Reader.java  ReaderInputStream.java  SeekableWriter.java  Writable.java  Writer.java
java/src/aff4/deprecated/: FlatWriteDevice.java  WritableZipVolume.java
java/src/aff4/hash/: HashDigestAdapter.java
java/src/aff4/infomodel/: AFFObject.java  CanonicalTriple.java  GraphCanonicalizer.java  Literal.java  NameSpace.java  NamedGraph.java  NamedGraphSet.java  Node.java  Quad.java  QuadList.java  QuadStore.java  QueryTools.java  Queryable.java  Resource.java  SliceResource.java  Storable.java  TooManyValuesException.java
java/src/aff4/scratch/: AppendableZipFile.java  AppendableZipOutputStream.java  SeekableOutputStream.java  TestCrypto.java  TestTrueZip.java
java/src/aff4/storage/: AFF4SegmentOutputStream.java  AFFObject.java  AddressResolutionException.java  DiscontiguousMapWriter.java  MapReader.java  ReadOnlyZipVolume.java  ReadableZipVolume.java  Reader.java  SeekableWriter.java  StreamReader.java  StreamWriter.java  WritableZipVolumeImpl.java  WriteableZipVolume.java  Writer.java  ZipVolume.java
java/src/aff4/stream/: DataObjectVisitOrchestrator.java  (+5 more)
lib/: Makefile.am  SConstruct  aff1.c  aff4_image.c  aff4_utils.c  aff4_zip.c  class.c  data_store.c  dirvol.c  encode.c  encrypt.c  error.c  ewfvolume.c  file.c  graph.c  http.c  identity.c  image.c  libaff4.c  link.c  map.c  misc.c  queue.c  rdf.c  rdf.h  resolver.c  sc_config.h.in  stringio.c  talloc.c  unittests.c  zip.c
libraptor/: README  SConscript  raptor_avltree.c  raptor_general.c  raptor_internal.h  raptor_serialize.c  raptor_serialize_turtle.c  raptor_uri.c  sc_config.h.in
libreplace/: replace.h
libtdb/: lock.c  tdb_private.h
paper/: Makefile  compressed_folders.eps  crypted.eps  diagrams.odg  hash.eps  image_segments.eps  overlay.eps  paper.bib  paper.tex  usage1.eps  zip_structure.eps
patches/: README  afflib-3.3.4.diff.sh  afflib-3.3.4.patch  ewfinfo.c  sleuthkit-3.0.1.diff.sh  sleuthkit-3.0.1.patch
python/: README  aff4.py  aff4_attributes.py  aff4fuse.py  aff4imager.py  ewf.py  fsbuilder.py  pyaff.py  pyewf.py  raptor.py  tcpconvert.py  unit_tests.py
python2.6/: Makefile.am  SConstruct  aff4_navigator.py  aff4imager.py  class_parser.py  inspect.py  lexer.py  pyaff4.c  test.py
python2.6/regfi/: broweser.py  pyregfi.c  pyregfi.h  regfi.c  test.py
python2.6/tests/: cache_test.py  cipher_test.py  encrypted.py  file_backed_test.py  graph_tests.py  lock_test.py  lock_test2.py  lock_test3.py  log_test.py  map_test.py  resolver_iter_test.py  suite.py  t1.py  t2.py  t3.py  t4.py  tdb_test.py  test.py  test2.py  thread_test.py  valgrind-python.supp
python2.6/tsk/: fls.py  icat.py  istat.py  pytsk3.c  test.py  tsk3.c  tsk3.h  tskfuse.py
samples/: mediumimage.dd
scons-local-1.2.0/SCons/: Conftest.py  SConf.py  dblite.py
src/: Makefile.am  configure.in
src/include/: aff4.h  class.h  encode.h  fif.h  misc.h  stringio.h  talloc.h  zip.h
src/lib/: Makefile.am  blob.c  class.c  dirvol.c  encode.c  encrypt.c  fifinfo.c  http.c  identity.c  image.c  libaff4.c  libfif.c  link.c  map.c  misc.c  resolver.c  stringio.c  talloc.c  unittests.c  zip.c
src/tools/: Makefile.am  aff2imager.c  affuse.c  fsbuilder.c
src_old/include/: aff4.h  encode.h  list.h
src_old/lib/: class.c  dirvol.c  encode.c  identity.c  libaff4.c  resolver.c  zip.c
src_old/tools/: aff2imager.c  common.c
tests/: SConstruct  aff4_objects.c  image.c  rdfvalues.c  resolver.c  talloc_test.c  test-read-comparative.py  testOpen.py  testReadImageContents.py  testReadMaps.py  testReferencedMap.py  testResolverOpen  testResolverOpen.py  test_resolver.c  testall.py  utils.c  zip.c
tools/: Makefile.am  SConstruct  aff2imager.c  aff4imager.c  affuse.c  common.c  common.h  fsbuilder.c  raid_reconstructor.c
uuid/: gen_uuid.c  gen_uuid_nt.c  uuidP.h
(+66 files in other folders)
